Web app dynamism
Got the buttons and badges successfully accessing the javavscript actions and triggering web_ui.py  MonitoringApp actions. Next up: switching the monitoring loop over to main.py's App (if appropriate) and using main.py's loop to send monitoring status updates or getting web_ui.py to pull from main.py's status

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
     
     <main>
         <section>
-            <h2>System Status</h2>
+            <h2>Monitoring System Status</h2>
             <div id="status-container-vertical">
                 <section class="clear">
                     <sl-badge id="badge-idle" variant="primary" pill pulse>Idle</sl-badge>
