--- a/static/index.html
+++ b/static/index.html
@@ -90,8 +90,15 @@
         
     </div>
 
-
-
+    <div id="section-status-feed">
+        <h2>Status Updates</h2>
+        <div id="subsection-status-feed" class="subsection-status-feed">
+            <p id="card-status-update" class="card-status-update">placeholder status card</p>
+            <p id="card-status-update" class="card-status-update">placeholder status card</p>
+            <p id="card-status-update" class="card-status-update">placeholder status card</p>
+            <p id="card-status-update" class="card-status-update">placeholder status card</p>
+        </div>
+    </div>
 
     
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.0/cdn/shoelace-autoloader.js"></script>
