Work Order cards, Box saving improvements
Now the work order engine sends image-containing update cards to the UI, and files save themselves in Box properly.

--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
                     <p id="badge-box-check" class="col-md-2 badge bg-warning" hidden>Checking Box</p>    
                     
                     
-                    <div id="subsection-btns-test" class="btn-group-m" role="group" aria-label="Function Test Buttons" hidden>
+                    <div id="subsection-btns-test" class="btn-group-m" role="group" aria-label="Function Test Buttons">
                         <h4>Test Status Updates:</h4>
                         <button id="btn-test-program-status" type="button" class="btn btn-secondary">Program</button>
                         <button id="btn-test-video-status" type="button" class="btn btn-secondary">Video</button>
